force-app/main/default/objects/DIA_Document_Request__c/DIA_Document_Request__c.object-meta.xml
<CustomObject>
    <label>DIA Document Request</label>
    <nameField>
        <displayFormat>DIADR-{0000000}</displayFormat>
        <label>DIA Document Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DIA Document Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>