force-app/main/default/objects/DIA_Document_Request__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <label>Lead</label>
    <referenceTo>DIA_Lead__c</referenceTo>
    <relationshipLabel>DIA Document Requests</relationshipLabel>
    <relationshipName>DIA_Document_Requests</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>