force-app/main/default/objects/DIA_Document_Request__c/fields/Request_Expired__c.field-meta.xml
<CustomField>
    <fullName>Request_Expired__c</fullName>
    <formula>NOW() &gt;  DATETIMEVALUE(Expiration_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Request Expired</label>
    <type>Checkbox</type>
</CustomField>